# SkyRAT

./: .dockerignore  .env  .env.example  .gitignore  README.md  base_socket.h  client.cpp  data_transfer_Module.h  data_transfer_module.cpp  keylogger.cpp  main.cpp  server.py
Mouse_control/: mouse_client.cpp
PoCs/Mouse_control/: server_mouse.cpp
PoCs/data_download_upload/: data_transfer_Module.h
PoCs/keylogger/: keylogger.cpp
PoCs/registry_persistence/: README.md  registry_functions.h
PoCs/remote_shell/: server_remote_shell.py
Relatime_Screen_Record/: server_rsr.cpp
client/: CMakeLists.txt  README.md  client.cpp  keylog.txt  test_main.cpp
client/Core/: Client.cpp  Client.h  CommandDispatcher.cpp  ConfigManager.cpp  ConfigManager.h  ConnectionManager.cpp  ConnectionManager.h
client/Examples/: MessageProtocolExample.cpp
client/Include/: Platform.h
client/Modules/: ModuleManager.cpp  ModuleManager.h
client/Modules/Implementations/: DataTransferModule.cpp  DataTransferModule.h  KeyloggerModule.cpp  KeyloggerModule.h  main.cpp
client/Network/: MessageProtocol.h
client/Utils/: Logger.cpp  Logger.h  Platform.cpp  Utilities.cpp  Utilities.h
client/cmake/: mingw-w64-toolchain.cmake
client/config/: client.conf.template  skyrat_client.conf
client/modules/: module.cpp  module.h  remote_shell_module.cpp  remote_shell_module.h  screen_recording_module.cpp  screen_recording_module.h  ss_module.cpp  ss_module.h  test.cpp
client/modules/codes/: keylogger_module.cpp  module.cpp  mouse_control.cpp  remote_shell_module.cpp  screen_recording_module.cpp  screen_recording_module1.cpp
client/modules/headers/: mouse_control.h
client/modules/keylogger/: keylogger_module.cpp  keylogger_module.h
client/scripts/: build-cross-mingw.sh
client_legacy/: client.cpp  makefile
client_legacy/modules/codes/: data_transfer_module_wrapper.cpp  mouse_module.cpp  screen_recording_module.cpp  ss_module.cpp  webcam_module.cpp
client_legacy/modules/headers/: data_transfer_module_wrapper.h  keylogger_module.h  module.h  mouse_module.h  remote_shell_module.h  webcam_module.h
data_download_upload/: base_socket.h  data_transfer_Module.h  data_transfer_module.cpp  main.cpp
keylogger/: keylogger.cpp
new_client/: CMakeLists.txt  README.md  main.cpp  test_main.cpp  tests.cmake
new_client/Core/: CommandDispatcher.h  ConfigManager.cpp  ConnectionManager.h
new_client/Modules/: Imodule.h  ModuleManager.cpp
new_client/Network/: MessageProtocol.cpp
new_client/Utils/: ThreadPool.cpp  ThreadPool.h  Utilities.h
new_client/config/: skyrat_client.conf
registry_persistence/: registry_functions.cpp
remote_shell/: client_remote_shell.cpp
screen_recording/: client_scree_rec.cpp  server_screen_rec.cpp
screen_recording/Relatime_Screen_Record/: client_rsr.cpp
screenshot/: client_screenshot.cpp  server_screenshot.cpp
server/: .containerignore  .env.example  Containerfile  Containerfile.dev  Dockerfile  Jenkinsfile  README.md  agent.py  agent_tool.py  compose.old.yml  compose.yml  dev-compose.yml  generate-keys.py  generate_keys.py  globals.py  logger.py  requirement.txt  server.py  test-client.py
webcam_access/: client_webcam.cpp  server_webcam.cpp
